[project]
name = "klipper-cfs"
version = "0.1.0"
description = "A Python module for controlling the Creality File System (CFS) from Klipper firmware"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Klipper-CFS Contributors"}
]
keywords = ["klipper", "3d-printing", "creality", "cfs", "filament"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
]

dependencies = [
    "pyserial>=3.5",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/klipper-cfs"
"Bug Tracker" = "https://github.com/yourusername/klipper-cfs/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "extras"
]
